--- a/publisher-application/src/main/resources/application.properties
+++ b/publisher-application/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.cloud.stream.bindings.output.destination=input
+spring.cloud.stream.bindings.output.destination=messages
 spring.cloud.stream.default.contentType=application/json
