Added DLQ handler

--- a/another-subscriber/src/main/resources/application.properties
+++ b/another-subscriber/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.cloud.stream.bindings.messages.destination=messages
+spring.cloud.stream.bindings.messages.group=messageInputAnotherSubscriber
+spring.cloud.stream.rabbit.bindings.messages.consumer.autoBindDlq=true
