--- a/subscriber-application/src/main/resources/application.properties
+++ b/subscriber-application/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.cloud.stream.bindings.messages.destination=messages
+spring.cloud.stream.bindings.messages.group=messageInputSubscriber
+spring.cloud.stream.rabbit.bindings.messages.consumer.autoBindDlq=true
